--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview"
+		"build": "paraglide-js compile --project ./project.inlang && vite build",
+		"preview": "vite preview",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+		"postinstall": "paraglide-js compile --project ./project.inlang",
+		"deploy": "npm build && npx gh-pages -d build"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
