--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "paraglide-js compile --project ./project.inlang && vite build",
+		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"postinstall": "paraglide-js compile --project ./project.inlang",
 		"deploy": "npm run build && npx gh-pages -d build"
 	},
 	"devDependencies": {
